fix units test, mark 2 as TODO to come back to later